<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ozmar.calculator.MainActivity">

    <EditText
        android:id="@+id/editTextResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint=""
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint=""
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextResult" />

    <TextView
        android:id="@+id/textViewOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/editTextInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextInput" />

    <Button
        android:id="@+id/button0"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button0"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button1"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button2"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintLeft_toRightOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintLeft_toRightOf="@id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button4"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintLeft_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button6"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintLeft_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button7"
        app:layout_constraintLeft_toLeftOf="@id/editTextInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextInput" />

    <Button
        android:id="@+id/button8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button8"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintLeft_toRightOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/button9"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintLeft_toRightOf="@+id/button8" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonDivide"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonMultiply"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button6" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonSubtract"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintLeft_toRightOf="@+id/button3" />

    <Button
        android:id="@+id/buttonAddition"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonAddition"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintLeft_toRightOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintLeft_toRightOf="@+id/button0" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@string/buttonEquals"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDecimal"
        app:layout_constraintLeft_toRightOf="@+id/buttonDecimal" />

</android.support.constraint.ConstraintLayout>
